--- a/README.adoc
+++ b/README.adoc
@@ -1,12 +1,14 @@
 = F# TDMS Support
 
-`FSharp.Data.Tdms` provides support for TDMS files [[the-ni-tdms-file-format]]<<#the-ni-tdms-file-format-entry,^[1]^>>. It allows a user to access these in a type-safe manner through a type provider, but also through functions.
+`FSharp.Data.Tdms` provides support for TDMS files [[the-ni-tdms-file-format]]<<#the-ni-tdms-file-format-entry,^[1]^>>. It allows a user to access these in a type-safe manner through a generative type provider, but also through functions.
 
 == License
 
 `FSharp.Data.Tdms` is licensed under an MIT License. Please refer to https://github.com/mettekou/FSharp.Data.Tdms/blob/master/LICENSE[`LICENSE`] for its full text.
 
 == Usage
+
+=== From F#
 
 Using the generative type provider, given a TDMS file `Experiment.tdms` with a channel containing floating-point values named `Channel1` within a group named `Group1`:
 
@@ -24,7 +26,36 @@ let experiment = Experiment(Path)
 experiment.Group1.Channel1.Data |> Array.iter (printfn "%f")
 ----
 
-Alternatively, use the functions in the `FSharp.Data.Tdms` module.
+Alternatively, use the functions in the `FSharp.Data.Tdms` namespace, mainly those in the `File` module:
+
+[source,fsharp]
+----
+open FSharp.Data.Tdms
+
+File.read "Experiment.tdms" |>
+    File.tryRawData<float> "Group1" "Channel1" |>
+    Option.defaultValue [||] |>
+    Array.iter (printfn "%f")
+----
+
+=== From C#
+
+When using `FSharp.Data.Tdms` from C#, prefer the API for idiomatic C#:
+
+[source,csharp]
+----
+using FSharp.Data.Tdms;
+
+class Program {
+    public static void Main(string[] args) {
+        double[] data;
+        File.Read("Experiment.tdms").TryGetRawData<double>("Group1", "Channel1", out data);
+        foreach (double sample in data) {
+            Console.WriteLine(d);
+        }
+    }
+}
+----
 
 == References
 
