--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
-= F# TDMS Support
+= F# TDMS Support image:https://ci.appveyor.com/api/projects/status/neahoo6surfs4bo6?svg=true[] image:https://buildstats.info/nuget/FSharp.Data.Tdms[]
 
-`FSharp.Data.Tdms` provides support for TDMS files [[the-ni-tdms-file-format]]<<#the-ni-tdms-file-format-entry,^[1]^>>. It allows a user to access these in a type-safe manner through a generative type provider, but also through functions.
+`FSharp.Data.Tdms` provides support for TDMS files[[the-ni-tdms-file-format]]<<#the-ni-tdms-file-format-entry,^[1]^>>. It allows a user to access these in a type-safe manner through a generative type provider, but also through plain old functions.
 
 == License
 
